Hack fix for clipped broadcast shadow.

--- a/less/newtab.less
+++ b/less/newtab.less
@@ -119,6 +119,7 @@ body {
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
+        padding: 0.5em;
     }
 }
 
